--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/colors": "^7.0.0",
     "@tauri-apps/api": "^1.5.1",
     "antd": "^5.11.5",
     "react": "^18.2.0",
