--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
 name = "app"
-version = "0.1.0"
-description = "A Tauri App"
-authors = ["you"]
-license = ""
-repository = ""
+version = "1.0.0"
+description = "Arelith Combat Simulator GUI"
+license = "GPL-3.0"
 default-run = "app"
 edition = "2021"
 rust-version = "1.60"
@@ -18,6 +16,7 @@ tauri-build = { version = "1.5.0", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.5.3", features = [ "window-set-position", "shell-open", "window-start-dragging", "window-minimize", "window-close", "window-set-size"] }
+arelith_combat_simulator = "1.0.0"
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
