--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,6 +16,7 @@ tauri-build = { version = "1.5.0", features = [] }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.5.3", features = [ "window-set-position", "shell-open", "window-start-dragging", "window-minimize", "window-close", "window-set-size"] }
+rusqlite = { version = "0.30.0", features = ["bundled"] }
 arelith_combat_simulator = "1.1.0"
 
 [features]
