--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -15,7 +15,7 @@ tauri-build = { version = "1.5.0", features = [] }
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-tauri = { version = "1.5.3", features = [ "window-set-position", "shell-open", "window-start-dragging", "window-minimize", "window-close", "window-set-size"] }
+tauri = { version = "1.5.3", features = [ "notification-all", "window-set-position", "shell-open", "window-start-dragging", "window-minimize", "window-close", "window-set-size"] }
 rusqlite = { version = "0.30.0", features = ["bundled"] }
 arelith_combat_simulator = "1.4.4"
 
