--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/colors": "^7.0.0",
     "@tauri-apps/api": "^1.5.1",
     "antd": "^5.11.5",
+    "echarts-for-react": "^3.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
