--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/colors": "^7.0.0",
+    "@fontsource/noto-sans": "^5.0.18",
     "@tauri-apps/api": "^1.5.1",
     "antd": "^5.11.5",
     "echarts-for-react": "^3.0.2",
