--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,7 @@ serde_json = "1.0"
 tauri = { version = "1.5.3", features = [ "window-create", "notification-all", "window-set-position", "shell-open", "window-start-dragging", "window-minimize", "window-close", "window-set-size"] }
 rusqlite = { version = "0.30.0", features = ["bundled"] }
 arelith_combat_simulator = "1.4.4"
+fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
